tests/files/parser_tests/should_fail/093.cmdr
//Should not parse due to missing types
add = (a : int, b:) {
    return a + b;
}
